fluxcd/infrastructure/controllers/overlays/production/istio/gateway-cell-membrane-patch.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cell-membrane-gateway
  annotations:
    # Cilium LoadBalancer IPAM
    lbipam.cilium.io/ips: "172.22.30.71"
    lbipam.cilium.io/sharing-key: "hyrule-castle"
    lbipam.cilium.io/sharing-cross-namespace: "*"
