fluxcd/infrastructure/controllers/overlays/production/istio/gateway-xylem-patch.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: xylem-gateway
  annotations:
    # Cilium LoadBalancer IPAM
    lbipam.cilium.io/ips: "172.22.30.69"
    lbipam.cilium.io/sharing-key: "arylls-lookout"
    lbipam.cilium.io/sharing-cross-namespace: "*"
